tests/snapshots/supabase__init_with_the_supabase_preset_scaffolds_the_example_with_every_cell_todo.snap
---
source: tests/supabase.rs
expression: text
---
# Generated by `rlsspec init` from schema public.
# Every identity × table × operation is `todo`: replace each one with the access you intend, e.g.
# `select: deny`, `select: { rows: "published" }` or `update: [{ where: "true", expect: deny }]`.
# `rlsspec cover` shows what is left; `rlsspec test` runs what is specified.
version: 1
preset: supabase                  # identities' `claims` become the JWT settings auth.uid() reads

database:
  url: ${env:DATABASE_URL}
  schemas: [public]

# setup:                          # SQL files run first as the privileged role, always rolled back
#   - seed.sql                    # (the rows your checks need)

# The roles the Supabase API switches to: anon without a JWT, authenticated with one.
# Left out:
#   role postgres: BYPASSRLS, so no policy applies to it
#   role service_role: BYPASSRLS, so no policy applies to it
identities:
  anon:
    role: anon
    claims: { role: anon }
  authenticated:
    role: authenticated
    claims: { role: authenticated }
    # TODO: sub, the user id auth.uid() returns, e.g. claims: { sub: "…" }; one identity per user you check

# Cells without a case are listed as unspecified. Use `fail` in CI once the spec is complete.
unspecified: warn

expect:
  lists:
    anon: { select: todo, insert: todo, update: todo, delete: todo }
    authenticated: { select: todo, insert: todo, update: todo, delete: todo }
  todos:
    anon: { select: todo, insert: todo, update: todo, delete: todo }
    authenticated: { select: todo, insert: todo, update: todo, delete: todo }
  shares:
    anon: { select: todo, insert: todo, update: todo, delete: todo }
    authenticated: { select: todo, insert: todo, update: todo, delete: todo }
